force-app/main/default/objects/Elevate_BOSS__c/Elevate_BOSS__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Elevate BOSS</label>
</CustomObject>