force-app/main/default/objects/Elevate_BOSS__c/fields/QuantityType__c.field-meta.xml
<CustomField>
    <fullName>QuantityType__c</fullName>
    <label>Quantity Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>