force-app/main/default/objects/Elevate_BOSS__c/fields/ZProductId__c.field-meta.xml
<CustomField>
    <fullName>ZProductId__c</fullName>
    <label>Zuora Product Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>