force-app/main/default/objects/Elevate_BOSS__c/fields/ZProductRatePlanChargeId__c.field-meta.xml
<CustomField>
    <fullName>ZProductRatePlanChargeId__c</fullName>
    <label>Zuora Product Rate Plan Charge Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>