force-app/main/default/objects/Elevate_BOSS__c/fields/ZProductRatePlanChargeType__c.field-meta.xml
<CustomField>
    <fullName>ZProductRatePlanChargeType__c</fullName>
    <label>Zuora Product Rate Plan Charge Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>