force-app/main/default/objects/Elevate_BOSS__c/fields/ZProductRatePlanId__c.field-meta.xml
<CustomField>
    <fullName>ZProductRatePlanId__c</fullName>
    <label>Zuora Product Rate Plan Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>