force-app/main/default/objects/Elevate_BOSS__c/fields/ZProductRatePlanName__c.field-meta.xml
<CustomField>
    <fullName>ZProductRatePlanName__c</fullName>
    <label>Zuora Product Rate Plan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>