force-app/main/default/objects/Elevate_BOSS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ProductName__c</columns>
    <columns>ProductType__c</columns>
    <columns>ZProductRatePlanName__c</columns>
    <columns>QuantityType__c</columns>
    <columns>ZProductRatePlanChargeType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>